--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://Gustavo-2027.github.io/" target="_blank">Gustavo Silva</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
